--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	implementation 'javax.servlet:jstl'
+	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
 	//runtimeOnly 'mysql:mysql-connector-java'
 	//implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'	
 	//implementation 'org.springframework.boot:spring-boot-starter-security'
