--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/ictsaeil?serverTimezone=Asia/Seoul&characterEncoding=UTF-8&allowMultiQueries=true&useUnicode=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=qwe123!@#
+
+# Messages
+spring.messages.basename=messages/messages
+spring.messages.encoding=UTF-8
