--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,8 @@ spring.datasource.password=qwe123!@#
 # Messages
 spring.messages.basename=messages/messages
 spring.messages.encoding=UTF-8
+
+# Scheduler
+scheduler.task.fixed.delay=2000
+scheduler.task.fixed.rate=5000
+scheduler.task.initial.delay=5000
