--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,6 @@
+# Log4j2
+logging.config=classpath:log4j2-prod.xml
+
 # DataSource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/ictsaeil?serverTimezone=Asia/Seoul&characterEncoding=UTF-8&allowMultiQueries=true&useUnicode=true&useSSL=false
