--- a/2022/demo/build.gradle
+++ b/2022/demo/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
 	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
 	implementation 'org.apache.tiles:tiles-jsp:3.0.8'
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
 	//implementation 'org.springframework.boot:spring-boot-starter-security'
 	//testImplementation 'org.springframework.security:spring-security-test'
 }
