[추가] 다국어처리 예제 코드

--- a/2022/demo/src/main/resources/application.properties
+++ b/2022/demo/src/main/resources/application.properties
@@ -10,3 +10,9 @@ spring.datasource.password=qwe123!@#
 
 # MyBatis
 mybatis.mapper-locations=classpath:mappers/*Mapper.xml
+
+# Messages
+spring.messages.basename=messages/messages
+spring.messages.encoding=UTF-8
+spring.messages.fallback-to-system-locale=false
+spring.messages.use-code-as-default-message=true
