[추가] [Scheduler] 예제 코드

--- a/2022/demo/src/main/resources/application.properties
+++ b/2022/demo/src/main/resources/application.properties
@@ -16,3 +16,8 @@ spring.messages.basename=messages/messages
 spring.messages.encoding=UTF-8
 spring.messages.fallback-to-system-locale=false
 spring.messages.use-code-as-default-message=true
+
+# Scheduler
+testscheduler.fixed.delay=5000
+testscheduler.fixed.rate=5000
+testscheduler.initial.delay=5000
