--- a/2022/demo/src/main/resources/application.properties
+++ b/2022/demo/src/main/resources/application.properties
@@ -1,12 +1,8 @@
+spring.profiles.active=prod
+
 # View
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
-
-# DataSource
-spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/ictsaeil?serverTimezone=Asia/Seoul&characterEncoding=UTF-8&allowMultiQueries=true&useUnicode=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=qwe123!@#
 
 # MyBatis
 mybatis.mapper-locations=classpath:mappers/*Mapper.xml
