--- a/2022/demo/src/main/resources/application-prod.properties
+++ b/2022/demo/src/main/resources/application-prod.properties
@@ -3,3 +3,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/ictsaeil?serverTimezone=Asia/Seoul&characterEncoding=UTF-8&allowMultiQueries=true&useUnicode=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=qwe123!@#
+
+# Log4j2
+logging.config=classpath:log4j2-prod.xml
